--- a/学习笔记/002 数据类型.md
+++ b/学习笔记/002 数据类型.md
@@ -17,4 +17,36 @@
 7、在scala中仍然遵守低精度的值向高精度的值自动转换
 
 
+### 浮点型使用细节
+
+1、scala的浮点型常量默认为Double型，声明Float型常量，须加'f'或'F'
+
+
+### Unit类型、Null类型和Nothing类型
+
+1、Unit表示无值，和其他语言中void等同。用作不返回任何结果的方法的结果类型。Unit只有一个实例值，写成()
+
+2、Null类型只有一个实例值null。null可以赋值给任意引用类型AnyRef，但是不能赋值给值类型AnyVal
+
+3、Nothing类型在scala的类层级的最低端。它是任何其他类型的子类型。当一个函数，我们确定没有正常返回值，可以用Nothing来指定返回类型，
+这样有一个好处，就是我们可以把返回的值赋给其它的函数或者变量。
+
+
+### 自动类型转换
+
+1、有多种类型的数据混合运算时，系统首先自动将所有数据转换成容量最大的那种类型，然后进行计算。
+
+2、(byte、short)和Char之间不会相互自动转换。
+
+3、Byte/Short/Char之间可以计算，在计算时首先转换为Int类型。
+
+4、表达式结果的类型自动提升为操作数中最大的类型。
+
+
+### 强制类型转换
+
+1、强转符号只针对最近的操作数有效，往往会使用小括号提升优先级
+val num2:Int = (10\*3.5 + 6\*1.5).toInt
+
+2、Char类型可以保存Int的常量值，但不能保存Int的变量值，需要强转。
 
