--- a/学习笔记/006 隐式转换.md
+++ b/学习笔记/006 隐式转换.md
@@ -41,6 +41,6 @@
 
 ## 隐式的转换时机
 
-1. 当方法中的参数的类型与目标类型不一致时
-2. 当对象调用所在类中不存在的方法或成员时，编译器会自动将对象进行隐式转换
+1. 当方法中的参数的类型与目标类型不一致时，或者是赋值时。
+2. 当对象调用所在类中不存在的方法或成员时，编译器会自动将对象进行隐式转换。
 
